--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,39 @@
 {
-  "name": "jobly-solution",
+  "name": "jobly-backend",
   "version": "2.0.0",
   "description": "",
-  "main": "server.js",
+  "type": "module",
+  "exports": "./server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest -i"
+    "start": "node --experimental-vm-modules --no-warnings ./server.js",
+    "dev": "nodemon --experimental-vm-modules --no-warnings ./server.js",
+    "test": "node --experimental-vm-modules --no-warnings ./node_modules/jest/bin/jest.js -i"
   },
   "jest": {
+    "testEnvironment": "node",
     "testPathIgnorePatterns": [
       "/node_modules/",
       "config.js"
-    ]
+    ],
+    "moduleNameMapper": {
+      "#(.*)": "<rootDir>/node_modules/$1"
+    }
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "colors": "^1.4.0",
+    "@babel/plugin-syntax-import-assertions": "^7.20.0",
+    "bcrypt": "^5.1.0",
+    "chalk": "^5.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonschema": "^1.2.6",
-    "jsonwebtoken": "^8.5.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jest": "^29.5.0",
+    "jsonschema": "^1.4.1",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
-    "pg": "^8.3.0"
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "supertest": "^5.0.0-0"
